--- a/postfix/Dockerfile
+++ b/postfix/Dockerfile
@@ -4,12 +4,13 @@ RUN apt-get update
 RUN apt-get -y upgrade
 
 RUN apt-get install -y postfix
+RUN apt-get install -y dovecot-common  dovecot-imapd 
 RUN apt-get install -y supervisor
 
 ADD ./supervisord.conf /etc/supervisor/supervisord.conf
 ADD ./main.cf /etc/postfix/main.cf
 
-EXPOSE 25
+EXPOSE 25 25
 
-CMD ["/usr/bin/supervisord"]
-#ENTRYPOINT ["/usr/bin/supervisord"]
+#CMD ["/usr/bin/supervisord"]
+ENTRYPOINT ["/usr/bin/supervisord"]
